fix folder nav horizontal scrolling when file name is very long.  date column should not wrap and user should be able to scroll horizontally to see all the contents

--- a/bundles/org.eclipse.orion.client.ui/web/css/controls.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/controls.css
@@ -809,6 +809,7 @@ html[dir="rtl"] #treeButtons { /* ACGC */
 	padding-right: 8px;
 	padding-top: 8px;
 	vertical-align:top;
+	white-space: nowrap;
 }
 
 html[dir="rtl"] .secondaryColumn { /* ACGC */
