--- a/bundles/org.eclipse.orion.client.ui/web/css/sections.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/sections.css
@@ -37,7 +37,7 @@ html[dir="rtl"] .sectionItemCount { /* ACGC */
 }
 
 .sectionTable {
-	overflow-x: hidden;
+	overflow-x: auto;
 }
 
 .sectionTableItem {
